--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-hookz/web": "^25.0.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "cash-dom": "^8.1.5",
