--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.3.0",
