--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
+    "xlsx": "^0.18.5",
     "zepto": "^1.2.0"
   },
   "scripts": {
