--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datetime": "^3.3.1",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
