--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "cash-dom": "^8.1.5",
+    "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-datetime": "^3.3.1",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.3.0",
